<resources>
    <string name="app_name">MyFireBaseProjectWithDb</string>
    <string name="receiver_demo_text">Reciever text</string>
    <string name="name">First name</string>
    <string name="fname">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cpassword">Confirm Password</string>
    <string name="demo_msg">this is a sent massage </string>
</resources>