<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".CustomSignUpActivity"
    android:background="#00BCB9B9"
    android:orientation="vertical">

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:text="Signup Page"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"

         />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        app:cardCornerRadius="50dp">

        <ImageView
            android:id="@+id/profileImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:src="@drawable/baseline_account_circle_24" />
    </com.google.android.material.card.MaterialCardView>



    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textColorHint="@color/com_facebook_blue"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/firstnameid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:inputType="textCapWords"
            android:selectAllOnFocus="true"
            android:importantForAutofill="no"
            android:imeOptions="actionNext"
            android:contentDescription="Enter How Much Cookies You Want"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textColorHint="@color/com_facebook_blue"

        app:errorEnabled="true">

        <EditText
            android:id="@+id/lastnameid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fname"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:inputType="textCapWords"
            android:selectAllOnFocus="true"
            android:importantForAutofill="no"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textColorHint="@color/com_facebook_blue"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/emailSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:inputType="textCapWords"
            android:selectAllOnFocus="true"
            android:imeOptions="actionNext"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textColorHint="@color/com_facebook_blue"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/show_password">

        <EditText
            android:id="@+id/passwordId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:selectAllOnFocus="true"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textColorHint="@color/com_facebook_blue"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/show_password">

        <EditText
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cpassword"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:imeOptions="actionDone"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionGo"
        android:text="SignUp"
        app:cornerRadius="10dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:strokeColor="@color/black"
        />

    <!--    <EditText-->
<!--        android:id="@+id/firstnameid"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:hint="First Name"-->
<!--        android:singleLine="true"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/materialCardView"-->
<!--        tools:layout_editor_absoluteX="20dp"-->
<!--        android:imeOptions="actionNext"-->
<!--        />-->

<!--    <EditText-->
<!--        android:id="@+id/lastnameid"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:singleLine="true"-->
<!--        android:hint="Last Name"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/firstnameid"-->
<!--        tools:layout_editor_absoluteX="20dp"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:imeOptions="actionNext"-->

<!--        />-->

<!--    <EditText-->
<!--        android:id="@+id/emailSignup"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="12dp"-->
<!--        android:hint="email"-->
<!--        android:imeOptions="actionNext"-->
<!--        android:singleLine="true"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/lastnameid"-->
<!--        tools:layout_editor_absoluteX="20dp" />-->

<!--    <EditText-->
<!--        android:id="@+id/passwordId"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:singleLine="true"-->
<!--        android:hint="password"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/emailSignup"-->
<!--        tools:layout_editor_absoluteX="20dp"-->
<!--        android:imeOptions="actionNext"-->
<!--        />-->

<!--    <EditText-->
<!--        android:id="@+id/confirm"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="confirm password"-->
<!--        android:singleLine="true"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20sp"-->
<!--        android:layout_marginTop="15dp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/passwordId"-->
<!--        tools:layout_editor_absoluteX="20dp"-->
<!--        android:imeOptions="actionNext"-->
<!--        />-->

<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/SignUp"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:imeOptions="actionDone"-->
<!--        android:text="SignUp"-->
<!--        app:cornerRadius="10dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.498"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/confirm"-->
<!--        app:layout_constraintVertical_bias="0.211"-->
<!--        app:strokeColor="@color/black" />-->




</LinearLayout>